--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # 工作流名称
 name: Auto Deploy GitHub.io Blog
 
-# 触发条件：向 source 分支推送代码时触发（若你的源码分支是 main，改成 main）
+# 触发条件：向 main 分支推送代码时触发
 on:
   push:
     branches:
@@ -17,62 +17,42 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          # 拉取所有历史提交（部分主题需要）
-          fetch-depth: 0
+          fetch-depth: 0 # 拉取所有历史提交（部分主题需要）
 
-      # 步骤2：设置 Node.js 环境（根据你的博客框架调整版本，比如 18.x/20.x）
+      # 步骤2：设置 Node.js 环境
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          # 缓存 npm 依赖，加速后续构建
-          cache: 'npm'
+          cache: 'npm' # 缓存 npm 依赖，加速后续构建
 
-      # 步骤3：安装依赖（Hexo/Hugo/VitePress 通用，按需调整）
+      # 步骤3：安装依赖（VitePress 专用）
       - name: Install dependencies
         run: |
           npm install
           npm install -g vitepress
 
-      # 步骤4：构建静态文件（核心步骤，根据博客框架调整命令）
+      # 步骤4：构建静态文件（VitePress 正确命令）
       - name: Build static files
-        run:
-          # 以下命令二选一/按需修改：
-          # hexo clean && hexo generate # Hexo 构建命令
-          # hugo --minify               # Hugo 构建命令
-          npm run docs:build # VitePress/VuePress 构建命令
+        run: npm run docs:build # 修复：命令直接写在一行，删除多余注释
 
-      # 步骤5：部署到 GitHub Pages
-      # - name: Deploy to GitHub Pages
-      #   uses: peaceiris/actions-gh-pages@v4
-      #   with:
-      #     # 使用之前配置的 Secret 中的 PAT
-      #     github_token: ${{ secrets.ACCESS_TOKEN }}
-      #     # 构建后的静态文件目录（根据框架调整）：
-      #     # Hexo: public；Hugo: public；VitePress: docs/.vitepress/dist；VuePress: docs/.vuepress/dist
-      #     publish_dir: ./docs/.vitepress/dist
-      #     # 部署到 gh-pages 分支（GitHub Pages 默认读取该分支）
-      #     publish_branch: dist
-      #     # 部署时保留 CNAME 文件（自定义域名用）
-      #     keep_files: true
+      # 步骤5：部署到 dist 分支（修复缩进+语法）
       - name: Deploy with token
         env:
-                # 注入 Token 到环境变量
           DEPLOY_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-                # 配置仓库信息（无需修改，自动适配）
           REPO: github.com/booms21/booms21.github.io.git
-          BRANCH: dist  # 若你要推 dist 分支，改为 dist
+          BRANCH: dist
         run: |
-                # 基础配置（必须）
+          # 基础配置（必须：用户名/邮箱与GitHub账号一致）
           git config --global user.name "booms21"
-          git config --global user.email "949487862@qq.com"  # 替换为你的邮箱
+          git config --global user.email "949487862@qq.com"
 
-                # 进入构建目录（按你的框架调整：Hexo=public，VitePress=docs/.vitepress/dist）
+          # 进入 VitePress 构建后的静态文件目录
           cd ./docs/.vitepress/dist
 
-                # 初始化并推送
+          # 初始化git仓库并推送
           git init
           git add -A
           git commit -m "Auto deploy: ${{ github.event.head_commit.message }}"
-                # 关键：用 Token 拼接 URL，传递权限
+          # 关键：用Token拼接URL传递权限，强制推送覆盖dist分支
           git push -f https://booms21:${DEPLOY_TOKEN}@${REPO} master:${BRANCH}
